# liboas

./: .clang-format  .clang-tidy  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  liboas.pc.in
.claude/skills/json-schema-patterns/: SKILL.md
.claude/skills/liboas-architecture/: SKILL.md
.claude/skills/modern-c23/: SKILL.md
.claude/skills/rfc-reference/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  compat.yml
cmake/: liboasConfig.cmake.in
deploy/podman/: Containerfile  Containerfile.dev  Containerfile.test  Makefile  README.md
deploy/podman/docs/: CONTAINER_ARCHITECTURE.md  TROUBLESHOOTING.md
docs/: README.md
docs/en/: 01-architecture.md  02-oas-model.md  03-json-schema.md  04-schema-compiler.md  05-validator.md  06-integration.md  07-api-reference.md  08-development.md  README.md
docs/plans/: 2026-03-08-liboas-sprint-plan.md  2026-03-09-code-first-builder-api-design.md  2026-03-09-liboas-roadmap.md  2026-03-09-sprint10-bugfixes.md  2026-03-09-sprint11-oas-core-coverage.md  2026-03-09-sprint12-schema-keywords.md  2026-03-09-sprint13-framework-core.md  2026-03-09-sprint14-refactoring.md  2026-03-10-sprint17-18-design.md  2026-03-10-sprint17-18-plan.md
docs/rfc/: INDEX.md  README.md
docs/ru/: 01-architecture.md  02-oas-model.md  03-json-schema.md  04-schema-compiler.md  05-validator.md  06-integration.md  07-api-reference.md  08-development.md  README.md
include/liboas/: oas_adapter.h  oas_alloc.h  oas_builder.h  oas_compiler.h  oas_doc.h  oas_emitter.h  oas_error.h  oas_negotiate.h  oas_parser.h  oas_problem.h  oas_regex.h  oas_schema.h  oas_validator.h  oas_version.h.in
scripts/: oas-compat-test.sh  quality.sh  rfc-scraper.py  validate-spec.sh
src/adapter/: oas_adapter.c  oas_scalar.c
src/compiler/: compiled_doc_internal.h  oas_compiler.c  oas_doc_compiler.c  oas_format.c  oas_format.h  oas_instruction.c  oas_instruction.h
src/core/: oas_alloc.c  oas_cookie.c  oas_cookie.h  oas_error.c  oas_intern.c  oas_intern.h  oas_jsonptr.c  oas_jsonptr.h  oas_negotiate.c  oas_path_match.c  oas_path_match.h  oas_problem.c  oas_query.c  oas_query.h  oas_regex.h  oas_regex_libregexp.c  oas_regex_pcre2.c  oas_version.c
src/emitter/: oas_emitter.c  oas_emitter_internal.h  oas_yaml_emitter.c
src/model/: oas_doc.c  oas_doc_builder.c  oas_schema.c  oas_schema_builder.c
src/parser/: oas_doc_parser.c  oas_json.c  oas_json.h  oas_ref.c  oas_ref.h  oas_ref_cache.c  oas_ref_cache.h  oas_ref_fetch.c  oas_ref_file.c  oas_schema_parser.c  oas_schema_parser.h  oas_tls.h  oas_tls_openssl.c  oas_tls_wolfssl.c  oas_uri.c  oas_uri.h  oas_yaml.c  oas_yaml.h
src/validator/: oas_defaults.c  oas_request.c  oas_validator.c
tests/fixtures/: petstore-3.2.json  petstore.json  petstore_with_file_ref.json  ref_common.yaml  ref_pet.json
tests/fuzz/: fuzz_compiler.c  fuzz_doc_compiler.c  fuzz_doc_parse.c  fuzz_emitter.c  fuzz_format.c  fuzz_json_parse.c  fuzz_jsonptr.c  fuzz_path_match.c  fuzz_ref_resolve.c  fuzz_regex.c  fuzz_schema_parse.c  fuzz_validator.c
tests/integration/: test_petstore.c
tests/unit/: test_adapter.c  test_alloc.c  test_builder.c  test_compiler.c  test_cookie.c  test_defaults.c  test_doc.c  test_doc_compiler.c  test_doc_parser.c  test_doc_ref_integration.c  test_emitter.c  test_error.c  test_format.c  test_framework_core.c  test_instruction.c  test_intern.c  test_json.c  test_jsonptr.c  test_path_match.c  test_readwrite.c  test_ref.c  test_ref_cache.c  test_ref_conditional.c  test_ref_fetch.c  test_ref_file.c  test_ref_remote.c  test_regex.c  test_request.c  test_schema.c  test_schema_keywords.c  test_schema_parser.c  test_uri.c  test_validator.c  test_version.c  test_yaml.c  test_yaml_emitter.c
